Bug 157851 - FILEOPEN XLSX "Author" information about notes is not read
Summary: FILEOPEN XLSX "Author" information about notes is not read
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: high normal
Assignee: Not Assigned
URL:
Whiteboard: target:25.2.0
Keywords:
Depends on:
Blocks: XLSX-Limitations XLSX-Comments
  Show dependency treegraph
 
Reported: 2023-10-20 11:27 UTC by Gabor Kelemen (Collabora)
Modified: 2024-08-13 13:42 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Excel (9.40 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2023-10-20 11:27 UTC, Gabor Kelemen (Collabora)
Details
The example file in Excel 2016 and Calc master (160.44 KB, image/png)
2023-10-20 11:28 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2023-10-20 11:27:47 UTC
Created attachment 190334 [details]
Example file from Excel

When in Excel one adds a comment to a cell, there is a bit of information saved about the author name.
Calc does not read this from XLSX format, and displays the current users name when the user points at the comment marker in the editor window.

1. Open attached file in Calc
2. View - Comments -> off
3. Point to the top right corner of the B1 cell containing a note
-> at the top of the popup window the current users name and the opening time of the file appears.

Expected: the name of the user making the comment appears, as stored in xl\comments1.xml -> in this case:
    <authors>
        <author>Gábor Kelemen2010</author>
    </authors>

Excel does not store a time for this, so that can be omitted or set to 1970.01.01.

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 7d08767b890e723cd502b1c61d250924f695eb98
CPU threads: 15; OS: Windows 10.0 Build 19045; UI render: default; VCL: win
Locale: en-US (hu_HU); UI: en-US
Calc: threaded
Comment 1 Gabor Kelemen (Collabora) 2023-10-20 11:28:28 UTC
Created attachment 190335 [details]
The example file in Excel 2016 and Calc master
Comment 2 raal 2023-10-20 22:00:06 UTC
Confirm Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 3649dc202bedf72e37c77993a1f7027bfdfc6d9e
CPU threads: 4; OS: Linux 6.2; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded
Comment 3 Timur 2024-08-01 09:38:25 UTC
In addition to read issue, there is also save issue, as original author and other authors are changed with the current user.
Now that feature exists, that would be DataLoss so I set High.

As for time, we may set time in XLSX custom space not to lose it.
Comment 4 Pranam Lashkari 2024-08-13 13:40:41 UTC
This fixes the issue: https://gerrit.libreoffice.org/c/core/+/171805
Comment 5 Commit Notification 2024-08-13 13:42:09 UTC
Pranam Lashkari committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/8f591839b9715e186708f661c95a2cf60d63cc73

Resolves: tdf#157851 sc comments loaded incorrectly in xlsx

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.