Resolves: tdf#157851 sc comments loaded incorrectly in xlsx

problem:
1. when loading xlsx files, comments in that format does not store date,
there for libreoffice loaded comments with current date and time.

2. Author names were not loaded at all in xlsx, and by default
name of user was used as author instead

Change-Id: I7b1f7fcda01565a6ba131fbae72e7d86e5eaaf15
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/171805
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Tested-by: Caolán McNamara <caolan.mcnamara@collabora.com>
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/171809
Tested-by: Jenkins